--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 body{
-    background-color: #fff;
+    background-color: #f0f0f0;
     height: 100vh;
     margin: 0;
     box-sizing: border-box;
